# docs/swagger/src/main/java/it/csi/stacore/stacoresrv/api/dto/DatiCalcoloRimborsoNonGodutoVO.java
@@ -3,7 +3,6 @@ package it.csi.stacore.stacoresrv.api.dto;
 import java.util.Objects;
 import java.util.ArrayList;
 import io.swagger.annotations.ApiModel;
-import java.util.Date;
 import org.codehaus.jackson.annotate.JsonProperty;
 import org.codehaus.jackson.annotate.JsonCreator;
 import java.io.Serializable;
@@ -12,15 +11,13 @@ import io.swagger.annotations.*;
 
 @ApiModel(description="Oggetto utilizzato per calcolare il rimborso")
 
-public class DatiCalcoloRimborsoVO  implements Serializable {
+public class DatiCalcoloRimborsoNonGodutoVO  implements Serializable {
   // verra' utilizzata la seguente strategia serializzazione degli attributi: [explicit-as-modeled] 
   private static final long serialVersionUID = 1L;
   
   private String targa = null;
   private String tipoVeicolo = null;
-  private String tipoCompensazione = null;
   private String dataScadenza = null;
-  private Date dataEventoChiusura = null;
   private Integer mesiValidita = null;
 
   /**
@@ -52,20 +49,6 @@ public class DatiCalcoloRimborsoVO  implements Serializable {
   }
 
   /**
-   * Il codice tipo compensazione 
-   **/
-  
-  @ApiModelProperty(example = "P= ROTTAMAZIONE CON PERMUTA", value = "Il codice tipo compensazione ")
-  @JsonProperty("tipo_compensazione") 
- 
-  public String getTipoCompensazione() {
-    return tipoCompensazione;
-  }
-  public void setTipoCompensazione(String tipoCompensazione) {
-    this.tipoCompensazione = tipoCompensazione;
-  }
-
-  /**
    * la data di scadenza nel formato YYYYMM     
    **/
   
@@ -77,20 +60,6 @@ public class DatiCalcoloRimborsoVO  implements Serializable {
   }
   public void setDataScadenza(String dataScadenza) {
     this.dataScadenza = dataScadenza;
-  }
-
-  /**
-   * la data evento chiusura nel formato YYYY-MM_DD   
-   **/
-  
-  @ApiModelProperty(example = "esempio di data evento chiusura 2017-07-21", value = "la data evento chiusura nel formato YYYY-MM_DD   ")
-  @JsonProperty("data_evento_chiusura") 
- 
-  public Date getDataEventoChiusura() {
-    return dataEventoChiusura;
-  }
-  public void setDataEventoChiusura(Date dataEventoChiusura) {
-    this.dataEventoChiusura = dataEventoChiusura;
   }
 
   /**
@@ -116,30 +85,26 @@ public class DatiCalcoloRimborsoVO  implements Serializable {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    DatiCalcoloRimborsoVO datiCalcoloRimborsoVO = (DatiCalcoloRimborsoVO) o;
-    return Objects.equals(targa, datiCalcoloRimborsoVO.targa) &&
-        Objects.equals(tipoVeicolo, datiCalcoloRimborsoVO.tipoVeicolo) &&
-        Objects.equals(tipoCompensazione, datiCalcoloRimborsoVO.tipoCompensazione) &&
-        Objects.equals(dataScadenza, datiCalcoloRimborsoVO.dataScadenza) &&
-        Objects.equals(dataEventoChiusura, datiCalcoloRimborsoVO.dataEventoChiusura) &&
-        Objects.equals(mesiValidita, datiCalcoloRimborsoVO.mesiValidita);
+    DatiCalcoloRimborsoNonGodutoVO datiCalcoloRimborsoNonGodutoVO = (DatiCalcoloRimborsoNonGodutoVO) o;
+    return Objects.equals(targa, datiCalcoloRimborsoNonGodutoVO.targa) &&
+        Objects.equals(tipoVeicolo, datiCalcoloRimborsoNonGodutoVO.tipoVeicolo) &&
+        Objects.equals(dataScadenza, datiCalcoloRimborsoNonGodutoVO.dataScadenza) &&
+        Objects.equals(mesiValidita, datiCalcoloRimborsoNonGodutoVO.mesiValidita);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(targa, tipoVeicolo, tipoCompensazione, dataScadenza, dataEventoChiusura, mesiValidita);
+    return Objects.hash(targa, tipoVeicolo, dataScadenza, mesiValidita);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class DatiCalcoloRimborsoVO {\n");
+    sb.append("class DatiCalcoloRimborsoNonGodutoVO {\n");
     
     sb.append("    targa: ").append(toIndentedString(targa)).append("\n");
     sb.append("    tipoVeicolo: ").append(toIndentedString(tipoVeicolo)).append("\n");
-    sb.append("    tipoCompensazione: ").append(toIndentedString(tipoCompensazione)).append("\n");
     sb.append("    dataScadenza: ").append(toIndentedString(dataScadenza)).append("\n");
-    sb.append("    dataEventoChiusura: ").append(toIndentedString(dataEventoChiusura)).append("\n");
     sb.append("    mesiValidita: ").append(toIndentedString(mesiValidita)).append("\n");
     sb.append("}");
     return sb.toString();
