# stacoresrv-dto/src/main/java/it/csi/stacore/stacoresrv/api/dto/EsitoCalcoloRimborsoNonGodutoVO.java
@@ -1,26 +1,26 @@
 package it.csi.stacore.stacoresrv.api.dto;
 
-import java.util.Objects;
-import java.util.ArrayList;
-import io.swagger.annotations.ApiModel;
-import it.csi.stacore.stacoresrv.api.dto.ValutaVO;
-import java.util.Date;
-import org.codehaus.jackson.annotate.JsonProperty;
-import org.codehaus.jackson.annotate.JsonCreator;
 import java.io.Serializable;
-import javax.validation.constraints.*;
-import io.swagger.annotations.*;
+import java.util.Date;
+import java.util.Objects;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
 
 @ApiModel(description="Il risultato ottenuto dal calcola rimborso")
 
-public class EsitoCalcolaRimborso  implements Serializable {
+public class EsitoCalcoloRimborsoNonGodutoVO  implements Serializable {
   // verra' utilizzata la seguente strategia serializzazione degli attributi: [explicit-as-modeled] 
   private static final long serialVersionUID = 1L;
   
   private ValutaVO importoTotaleDovuto = null;
   private ValutaVO importoTotalePagato = null;
-  private ValutaVO cifraDaRimborsare = null;
+  private ValutaVO importoTotaleEccedente = null;
+  private ValutaVO importoTotaleNonGoduto = null;
   private Date dataUltimoGiornoUtilePagamento = null;
+  private Integer mensilita = null;
 
   /**
    **/
@@ -52,13 +52,26 @@ public class EsitoCalcolaRimborso  implements Serializable {
    **/
   
   @ApiModelProperty(value = "")
-  @JsonProperty("cifra_da_rimborsare") 
+  @JsonProperty("importo_totale_eccedente") 
  
-  public ValutaVO getCifraDaRimborsare() {
-    return cifraDaRimborsare;
+  public ValutaVO getImportoTotaleEccedente() {
+    return importoTotaleEccedente;
   }
-  public void setCifraDaRimborsare(ValutaVO cifraDaRimborsare) {
-    this.cifraDaRimborsare = cifraDaRimborsare;
+  public void setImportoTotaleEccedente(ValutaVO importoTotaleEccedente) {
+    this.importoTotaleEccedente = importoTotaleEccedente;
+  }
+
+  /**
+   **/
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("importo_totale_non_goduto") 
+ 
+  public ValutaVO getImportoTotaleNonGoduto() {
+    return importoTotaleNonGoduto;
+  }
+  public void setImportoTotaleNonGoduto(ValutaVO importoTotaleNonGoduto) {
+    this.importoTotaleNonGoduto = importoTotaleNonGoduto;
   }
 
   /**
@@ -75,6 +88,19 @@ public class EsitoCalcolaRimborso  implements Serializable {
     this.dataUltimoGiornoUtilePagamento = dataUltimoGiornoUtilePagamento;
   }
 
+  /**
+   **/
+  
+  @ApiModelProperty(value = "")
+  @JsonProperty("mensilita") 
+ 
+  public Integer getMensilita() {
+    return mensilita;
+  }
+  public void setMensilita(Integer mensilita) {
+    this.mensilita = mensilita;
+  }
+
 
   @Override
   public boolean equals(Object o) {
@@ -84,27 +110,31 @@ public class EsitoCalcolaRimborso  implements Serializable {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    EsitoCalcolaRimborso esitoCalcolaRimborso = (EsitoCalcolaRimborso) o;
-    return Objects.equals(importoTotaleDovuto, esitoCalcolaRimborso.importoTotaleDovuto) &&
-        Objects.equals(importoTotalePagato, esitoCalcolaRimborso.importoTotalePagato) &&
-        Objects.equals(cifraDaRimborsare, esitoCalcolaRimborso.cifraDaRimborsare) &&
-        Objects.equals(dataUltimoGiornoUtilePagamento, esitoCalcolaRimborso.dataUltimoGiornoUtilePagamento);
+    EsitoCalcoloRimborsoNonGodutoVO esitoCalcolaRimborsoNonGodutoVO = (EsitoCalcoloRimborsoNonGodutoVO) o;
+    return Objects.equals(importoTotaleDovuto, esitoCalcolaRimborsoNonGodutoVO.importoTotaleDovuto) &&
+        Objects.equals(importoTotalePagato, esitoCalcolaRimborsoNonGodutoVO.importoTotalePagato) &&
+        Objects.equals(importoTotaleEccedente, esitoCalcolaRimborsoNonGodutoVO.importoTotaleEccedente) &&
+        Objects.equals(importoTotaleNonGoduto, esitoCalcolaRimborsoNonGodutoVO.importoTotaleNonGoduto) &&
+        Objects.equals(dataUltimoGiornoUtilePagamento, esitoCalcolaRimborsoNonGodutoVO.dataUltimoGiornoUtilePagamento) &&
+        Objects.equals(mensilita, esitoCalcolaRimborsoNonGodutoVO.mensilita);
   }
 
   @Override
   public int hashCode() {
-    return Objects.hash(importoTotaleDovuto, importoTotalePagato, cifraDaRimborsare, dataUltimoGiornoUtilePagamento);
+    return Objects.hash(importoTotaleDovuto, importoTotalePagato, importoTotaleEccedente, importoTotaleNonGoduto, dataUltimoGiornoUtilePagamento, mensilita);
   }
 
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class EsitoCalcolaRimborso {\n");
+    sb.append("class EsitoCalcoloRimborsoNonGodutoVO {\n");
     
     sb.append("    importoTotaleDovuto: ").append(toIndentedString(importoTotaleDovuto)).append("\n");
     sb.append("    importoTotalePagato: ").append(toIndentedString(importoTotalePagato)).append("\n");
-    sb.append("    cifraDaRimborsare: ").append(toIndentedString(cifraDaRimborsare)).append("\n");
+    sb.append("    importoTotaleEccedente: ").append(toIndentedString(importoTotaleEccedente)).append("\n");
+    sb.append("    importoTotaleNonGoduto: ").append(toIndentedString(importoTotaleNonGoduto)).append("\n");
     sb.append("    dataUltimoGiornoUtilePagamento: ").append(toIndentedString(dataUltimoGiornoUtilePagamento)).append("\n");
+    sb.append("    mensilita: ").append(toIndentedString(mensilita)).append("\n");
     sb.append("}");
     return sb.toString();
   }
