# stacoresrv-dto/src/main/java/it/csi/stacore/stacoresrv/api/dto/EsitoCalcoloRimborsoVO.java
@@ -1,19 +1,17 @@
 package it.csi.stacore.stacoresrv.api.dto;
 
-import java.util.Objects;
-import java.util.ArrayList;
-import io.swagger.annotations.ApiModel;
-import it.csi.stacore.stacoresrv.api.dto.ValutaVO;
-import java.util.Date;
-import org.codehaus.jackson.annotate.JsonProperty;
-import org.codehaus.jackson.annotate.JsonCreator;
 import java.io.Serializable;
-import javax.validation.constraints.*;
-import io.swagger.annotations.*;
+import java.util.Date;
+import java.util.Objects;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+
+import io.swagger.annotations.ApiModel;
+import io.swagger.annotations.ApiModelProperty;
 
 @ApiModel(description="Il risultato ottenuto dal calcola rimborso")
 
-public class EsitoCalcolaRimborso  implements Serializable {
+public class EsitoCalcoloRimborsoVO  implements Serializable {
   // verra' utilizzata la seguente strategia serializzazione degli attributi: [explicit-as-modeled] 
   private static final long serialVersionUID = 1L;
   
@@ -84,11 +82,11 @@ public class EsitoCalcolaRimborso  implements Serializable {
     if (o == null || getClass() != o.getClass()) {
       return false;
     }
-    EsitoCalcolaRimborso esitoCalcolaRimborso = (EsitoCalcolaRimborso) o;
-    return Objects.equals(importoTotaleDovuto, esitoCalcolaRimborso.importoTotaleDovuto) &&
-        Objects.equals(importoTotalePagato, esitoCalcolaRimborso.importoTotalePagato) &&
-        Objects.equals(cifraDaRimborsare, esitoCalcolaRimborso.cifraDaRimborsare) &&
-        Objects.equals(dataUltimoGiornoUtilePagamento, esitoCalcolaRimborso.dataUltimoGiornoUtilePagamento);
+    EsitoCalcoloRimborsoVO esitoCalcolaRimborsoVO = (EsitoCalcoloRimborsoVO) o;
+    return Objects.equals(importoTotaleDovuto, esitoCalcolaRimborsoVO.importoTotaleDovuto) &&
+        Objects.equals(importoTotalePagato, esitoCalcolaRimborsoVO.importoTotalePagato) &&
+        Objects.equals(cifraDaRimborsare, esitoCalcolaRimborsoVO.cifraDaRimborsare) &&
+        Objects.equals(dataUltimoGiornoUtilePagamento, esitoCalcolaRimborsoVO.dataUltimoGiornoUtilePagamento);
   }
 
   @Override
@@ -99,7 +97,7 @@ public class EsitoCalcolaRimborso  implements Serializable {
   @Override
   public String toString() {
     StringBuilder sb = new StringBuilder();
-    sb.append("class EsitoCalcolaRimborso {\n");
+    sb.append("class EsitoCalcoloRimborsoVO {\n");
     
     sb.append("    importoTotaleDovuto: ").append(toIndentedString(importoTotaleDovuto)).append("\n");
     sb.append("    importoTotalePagato: ").append(toIndentedString(importoTotalePagato)).append("\n");
